[gd_scene load_steps=5 format=3 uid="uid://cupfflc3oh5av"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_s1vo5"]
[ext_resource type="PackedScene" uid="uid://byv1opgstgkt3" path="res://Scenes/obstacle.tscn" id="2_4won2"]
[ext_resource type="PackedScene" uid="uid://c36bfklt41qup" path="res://Scenes/player.tscn" id="2_r12ap"]

[sub_resource type="Curve2D" id="Curve2D_k0oar"]
bake_interval = 0.01
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 32, 0, 0, 0, 0, 0, 1120, 0)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_s1vo5")
obstacle_scene = ExtResource("2_4won2")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(576, 576)

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Player" parent="." instance=ExtResource("2_r12ap")]
position = Vector2(0, 2)

[node name="ObstaclePath" type="Path2D" parent="."]
position = Vector2(0, -60)
curve = SubResource("Curve2D_k0oar")

[node name="ObstacleSpawnLocation" type="PathFollow2D" parent="ObstaclePath"]
position = Vector2(32, 0)

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
